--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,6 @@
 platform = atmelavr
 board = uno
 framework = arduino
-lib_deps = arduino-libraries/Stepper@^1.1.3
+lib_deps = 
+	arduino-libraries/Stepper@^1.1.3
+	gmarty2000/Joystick@^1.0.0
